<resources>
    <string name="app_name">AlkeWalletModulo4</string>
    <string name="alkewallet">AlkeWallet</string>
    <string name="slogan">El lugar mas seguro para tu dinero</string>
    <string name="crear_cuenta">Crear cuenta nueva</string>
    <string name="ya_tienes_cuenta">Ya tienes cuenta?</string>
    <string name="titulopantalla3">Logea y empeza a transferir!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="inicio">Inicio</string>
    <string name="hola_amanda">Hola Amanda!</string>
    <string name="balance_total">Balance total</string>
    <string name="monto_home">$124.57</string>
    <string name="ingresar_dinerobtn">Ingresar Dinero</string>
    <string name="enviar_dinero_btn">Enviar Dinero</string>
    <string name="ultimas_transacciones_txt">Ultimas transacciones</string>
    <string name="inicio_home_empty">Inicio</string>
    <string name="bienvenida_home_empty">Hola Amanda!</string>
    <string name="balance_total_home_empty">Balance total</string>
    <string name="monto_home_empty">$124.57</string>
    <string name="ultimas_transacciones_home_empty_txt">Ultimas transacciones</string>
    <string name="email_lb_loguea">Email</string>
    <string name="ingresa_tu_email_hint_logea">Ingresa tu email</string>
    <string name="password_logea_txt">Contraseña</string>
    <string name="password_hint_logea">Ingresa tu contraseña</string>
    <string name="olvidaste_password_enlace_logea">Olvidaste tu contraseña?</string>
    <string name="login_btn_logea">Login</string>
    <string name="crear_una_nueva_cuenta_enlace_logea">Crear una nueva cuenta</string>
    <string name="mi_perfil_profile_page">Mi perfil</string>
    <string name="mi_informacion_profilepage">Mi información</string>
    <string name="mis_tarjetas_profilepage">Mis tarjetas</string>
    <string name="opciones_profilepage">Opciones</string>
    <string name="centro_de_ayuda_profilepage">Centro de ayuda</string>
    <string name="nombre_request">Reem Khaled</string>
    <string name="email_request">reem_1993@gmail.com</string>
    <string name="cantidad_ingresar_txt_request">Cantidad a Igresar</string>
    <string name="monto_request">20.00</string>
    <string name="notas_transferencia_txt_request">Notas de transferencia</string>
    <string name="notas_transferencia_request">Agregar notas de transferencia</string>
    <string name="ingresar_dinero_request_btn">Ingresar Dinero</string>
    <string name="nombre_send">Yara Khalil</string>
    <string name="email_send">yara_khalil@gmail.com</string>
    <string name="cantidad_a_transferir_send">Cantidad a transferir</string>
    <string name="monto_send">12.50</string>
    <string name="notas_transferencia_send">Notas de transferencia</string>
    <string name="notas_send">Agregar notas de transferencia</string>
    <string name="enviar_dinero_send_btn">Enviar Dinero</string>
    <string name="titulo_signup">Registrarse y empezar a transferir</string>
    <string name="ingresar_nombre_hint_signup">Ingresar nombre</string>
    <string name="nombre_lb_signup">Nombre</string>
    <string name="apellido_txt_signup">Apellido</string>
    <string name="ingresar_apellido_hint_signup">Ingresar apellido</string>
    <string name="email_txt_signup">Email</string>
    <string name="ingresar_email_hint_signup">Ingresar Email</string>
    <string name="password_txt_signup">Contraseña</string>
    <string name="ingresar_password_hint_signup">Ingresar contraseña</string>
    <string name="password2_txt_signup">Contraseña</string>
    <string name="reingresar_password_hint_signup">Reingresar contraseña</string>
    <string name="login_signup_btn">Login</string>
    <string name="crear_una_nueva_cuenta_enlace_signup">Crear una nueva cuenta</string>
    <string name="no_hay_transacciones_registradas">No hay transacciones registradas!</string>
    <string name="nombre1_fragment">Yara Khalil</string>
    <string name="fecha_fragment">Oct 14, 10:24 AM</string>
    <string name="monto1_fragment">-$15.00</string>
    <string name="nombre2_fragment">Sara Ibrahim</string>
    <string name="fecha2_fragment">Oct 12, 02:13 PM</string>
    <string name="nombre3_fragment">Ahmad Ibrahim</string>
    <string name="fecha3_fragment">Oct 11, 01:19 AM</string>
    <string name="monto3_fragment">+$12.40</string>
    <string name="monto2_fragment">+$20.50</string>
    <string name="nombre4_fragemnt">Reem Khaled</string>
    <string name="fecha4_fragment">Oct 07, 09:10 PM</string>
    <string name="monto4_fragment">-$21.30</string>
    <string name="nombre5_fragment">Hiba Saleh</string>
    <string name="fecha5_fragment">Oct 04, 05:45 AM</string>
    <string name="monto5_fragment">+$09.00</string>
    <string name="ya_tienes_una_cuenta_signup">Ya tienes una cuenta??</string>
    <string name="alkewalletApp">AlkeWallet</string>
</resources>